--- a/index.html
+++ b/index.html
@@ -3,182 +3,186 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>과제 웹 페이지</title>
+    <title>과제 통합 웹 페이지</title>
     <style>
-        /* 페이지 왼쪽 상단에 스타일이 지정된 이름 */
-        #name-info {
-            font-size: 24px;
-            font-weight: bold;
-            color: white;
-            margin: 10px;
-        }
-
-        /* 연락처 정보 스타일 */
-        .contact-info {
-            font-size: 16px;
-            color: white;
-        }
-
-        /* 탐색 모음 */
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-            padding-left: 0;
-        }
-
-        nav ul li {
-            font-size: 18px;
-            color: white;
-        }
-
-        nav ul li:hover {
-            font-weight: bold;
-            color: lightblue;
+        /* 기본 스타일 */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
         }
 
         /* 상단바 스타일 */
         #header {
             background-color: purple;
             padding: 15px;
+            color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
 
-        #left-section {
+        #header nav ul {
+            list-style: none;
             display: flex;
-            flex-direction: column;
+            gap: 20px;
+            padding-left: 0;
         }
 
-        /* 아이콘 스타일 */
-        .icon {
-            margin-right: 10px;
+        #header nav ul li {
+            font-size: 18px;
         }
 
-        /* 중앙 정렬 */
-        .contact-info div {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        /* 내 정보 섹션 스타일 */
-        #about-me {
-            display: flex;
-            align-items: center;
+        /* 프로젝트 섹션 */
+        #projects {
             margin: 50px 20px;
         }
 
-        #about-me img {
-            width: 150px;
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-
-        #about-me-text {
-            font-size: 20px;
-            line-height: 1.6;
-        }
-
-        #about-me-text h1 {
-            font-size: 32px;
+        #projects h2 {
             color: purple;
+            font-size: 28px;
+            margin-bottom: 20px;
         }
 
-        /* 스킬 섹션 스타일 */
-        #skills {
+        .project-item {
+            margin-bottom: 20px;
+        }
+
+        .project-item h3 {
+            font-size: 22px;
+            margin-bottom: 5px;
+        }
+
+        .project-item p {
+            font-size: 16px;
+            margin-left: 15px;
+        }
+
+        .divider {
+            border-bottom: 1px solid #ccc;
+            margin: 10px 0;
+        }
+
+        /* 권장 사항 섹션 */
+        #recommendations {
+            margin: 50px 20px;
+        }
+
+        #recommendations h2 {
+            color: purple;
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        .recommendation-list {
             display: flex;
-            justify-content: space-around;
-            margin: 40px 20px;
+            justify-content: space-between;
         }
 
-        .skill {
-            text-align: center;
+        .recommendation {
+            width: 30%;
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 10px;
-            width: 150px;
+            background-color: #f9f9f9;
         }
 
-        .skill img {
+        .recommendation p {
+            font-size: 16px;
+            font-style: italic;
+        }
+
+        .recommendation::before {
+            content: "“";
+            font-size: 30px;
+            vertical-align: top;
+            color: purple;
+        }
+
+        .recommendation::after {
+            content: "”";
+            font-size: 30px;
+            vertical-align: bottom;
+            color: purple;
+        }
+
+        /* 홈 아이콘 스타일 */
+        #home-icon {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+        }
+
+        #home-icon img {
             width: 50px;
             height: 50px;
-            margin-bottom: 10px;
+            cursor: pointer;
         }
-
-        .skill p {
-            margin: 5px 0;
-            font-size: 16px;
-        }
-
     </style>
 </head>
 <body>
 
     <!-- 상단바 -->
     <div id="header">
-        <div id="left-section">
-            <div id="name-info">
-                Myeongryun Lee
-            </div>
-            <div class="contact-info">
-                <div><img class="icon" src="email-icon.png" alt="이메일 아이콘" width="20"> u1478136@umail.Utah.edu</div>
-                <div><img class="icon" src="phone-icon.png" alt="전화 아이콘" width="20"> 010-6208-8217</div>
-            </div>
+        <div>
+            <h1>과제 통합 웹 페이지</h1>
         </div>
-
         <nav>
             <ul>
-                <li>About Me</li>
-                <li>Skills</li>
                 <li>Projects</li>
                 <li>Recommendations</li>
             </ul>
         </nav>
     </div>
 
-    <!-- 내 정보 섹션 -->
-    <section id="about-me">
-        <img src="profile.jpg" alt="Profile Image">
-        <div id="about-me-text">
-            <h1>Hi, I'm Myeongryun Lee!</h1>
-            <p>
-                I am currently a junior majoring in Psychology at the University of Utah.
-                I have a keen interest in human factors and I am studying to gain more knowledge in the field.
-                In addition, I am also pursuing certification in AI development through courses like IBM AI and Machine Learning on Coursera.
-            </p>
+    <!-- 프로젝트 섹션 -->
+    <section id="projects">
+        <h2>Projects</h2>
+
+        <div class="project-item">
+            <h3>Chatbot</h3>
+            <p>• Developed a secure website integrated with chatbot for an automobile client using HTML, CSS, JavaScript and IBM Watson Assistant.</p>
+        </div>
+        <div class="divider"></div>
+
+        <div class="project-item">
+            <h3>Sentiment Analyzer</h3>
+            <p>• Developed and deployed a sentiment analyzer for the product review section of an eCommerce platform using IBM NLU.</p>
+        </div>
+        <div class="divider"></div>
+
+        <div class="project-item">
+            <h3>Fashion Website</h3>
+            <p>• Created a styled multipage website for a new player in the fashion industry and integrated it with a shopping cart, using Stripe for payment gateway.</p>
         </div>
     </section>
 
-    <!-- 스킬 섹션 -->
-    <section id="skills">
-        <div class="skill">
-            <img src="html-logo.png" alt="HTML Logo">
-            <p>HTML</p>
-            <p>4 years experience</p>
-        </div>
-        <div class="skill">
-            <img src="css-logo.png" alt="CSS Logo">
-            <p>CSS</p>
-            <p>4 years experience</p>
-        </div>
-        <div class="skill">
-            <img src="js-logo.png" alt="JavaScript Logo">
-            <p>JavaScript</p>
-            <p>3 years experience</p>
-        </div>
-        <div class="skill">
-            <img src="node-logo.png" alt="Node.js Logo">
-            <p>Node.js</p>
-            <p>4 years experience</p>
-        </div>
-        <div class="skill">
-            <img src="react-logo.png" alt="React Logo">
-            <p>React</p>
-            <p>4 years experience</p>
+    <!-- 권장 사항 섹션 -->
+    <section id="recommendations">
+        <h2>Recommendations</h2>
+
+        <div class="recommendation-list">
+            <div class="recommendation">
+                <p>Lilli is an exceptional problem solver. She always approaches challenges with a creative mindset and consistently delivers outstanding results.</p>
+            </div>
+
+            <div class="recommendation">
+                <p>It was a pleasure working with Lilli. Her attention to detail and commitment to high-quality work made her a key asset to our project.</p>
+            </div>
+
+            <div class="recommendation">
+                <p>Lilli has a natural ability to collaborate effectively with team members. She brings innovative ideas and ensures that projects meet deadlines without compromising quality.</p>
+            </div>
         </div>
     </section>
+
+    <!-- 홈 아이콘 섹션 -->
+    <div id="home-icon">
+        <a href="#header">
+            <img src="home_icon.png" alt="Home Icon">
+        </a>
+    </div>
 
 </body>
 </html>
